# BitX

./: BitDay.lst  BitGraph.lst  BitX.spec  CMakeLists.txt  README.md
BitBalance/: BitBalance.c  bb_chart.c  bb_cleaning.c  bb_cnf.c  bb_csv_iter.c  bb_graph.c  bb_graph_png.c  bb_io.c  bb_m_tree.c  bb_png.c  bb_rates.c
BitBalance/include/: bb_cleaning.h  bb_cnf.h  bb_csv_data.h  bb_csv_iter.h  bb_error.h  bb_gl.h  bb_graph.h  bb_graph_png.h  bb_m_tree.h  bb_png.h
BitDay/: BitDay.c  bb_tree.c  bd_cnf.c  configini.c
BitDay/include/: configini.h
BitGraph/: BitGraph.c  bb_scan_double.c  bg_cleaning.c  bg_data_list.c  bg_m_tree.c  bg_png.c  bg_queue.c
BitGraph/include/: bb_chart.h  bb_io.h  bb_rates.h  bb_scan_double.h  bb_tree.h  bg_cnf.h  bg_data_list.h  bg_gl.h  bg_m_tree.h  bg_queue.h  bg_threads.h  bg_ts_error.h
include/: bb_buf_data.h  bd_cleaning.h  bd_cnf.h  bg_cleaning.h  bg_data.h  bg_dirent.h  bg_graph.h  bg_png.h  bg_svg.h  configini.h
src/: BitGraph.c  bb_buf_data.c  bd_cleaning.c  bg_chart.c  bg_cnf.c  bg_dirent.c  bg_graph.c  bg_svg.c  bg_ts_error.c  configini.c
